# Nyanziba_mbf_plugins

./: .gitignore  README.md  pixi.toml
.github/workflows/: ci.yml
demo/: README.md
demo/maps/: corridor.yaml
demo/scripts/: send_single_goal.py
demo/waypoints/: loop.yaml  single_goal.yaml
docs/: architecture.md  design_rationale.md  index.md  reading_guide.md
docs/reference/: error_codes.md  topics_and_actions.md
docs/testing/: planner_benchmark_test_basis.md  real_robot_planner_benchmark.md  ros2_kinematic_planner_test_basis.md
docs/usage/: custom_plugin.md  installation.md  local_pixi.md  parameter_mapping.md  quickstart.md  sim_e2e.md  waypoint_sender.md  webui.md
scripts/pixi/: activate.sh  build.sh  ros2_wrap.sh  setup.sh  shell.sh  sim_e2e.sh  sim_interactive.sh
texnitis_mbf_bringup/: CMakeLists.txt  package.xml
texnitis_mbf_bringup/config/: texnitis_mbf.yaml  texnitis_mbf_highspeed.yaml
texnitis_mbf_bringup/launch/: texnitis_mbf.launch.py
texnitis_mbf_common/: CMakeLists.txt  package.xml
texnitis_mbf_common/include/texnitis_mbf_common/: README.md  error_codes.hpp  height_map_provider.hpp  map_provider.hpp  pose_conversions.hpp  ros_logger_bridge.hpp  terrain_map_provider.hpp
texnitis_mbf_common/src/: height_map_provider.cpp  map_provider.cpp  terrain_map_provider.cpp
texnitis_mbf_controllers/: CMakeLists.txt  package.xml  plugins.xml  plugins_no_mppi.xml
texnitis_mbf_controllers/include/texnitis_mbf_controllers/: diff_drive_pure_pursuit_controller.hpp  lookahead_controller.hpp  mecanum_mppi_controller.hpp
texnitis_mbf_controllers/src/: diff_drive_pure_pursuit_controller.cpp  lookahead_controller.cpp  mecanum_mppi_controller.cpp
texnitis_mbf_planners/: CMakeLists.txt  package.xml  plugins.xml
texnitis_mbf_planners/include/texnitis_mbf_planners/: astar_planner.hpp  height_aware_astar_planner.hpp  kinematic_time_astar_planner.hpp
texnitis_mbf_planners/src/: astar_planner.cpp  height_aware_astar_planner.cpp  kinematic_time_astar_planner.cpp
texnitis_mbf_planners/test/: test_kinematic_time_astar_ros.cpp
texnitis_mbf_sim/: CMakeLists.txt  package.xml
texnitis_mbf_sim/config/: corridor.pgm  open_field.yaml  sim_demo.rviz
texnitis_mbf_sim/launch/: texnitis_mbf_sim_demo.launch.py
texnitis_mbf_sim/scripts/: flat_world_sim_node.py  run_e2e_check.py
texnitis_mbf_sim/test/: conftest.py  test_kinematics.py
texnitis_mbf_sim/texnitis_mbf_sim/: __init__.py  kinematics.py  occupancy.py
texnitis_mbf_tools/: CMakeLists.txt  package.xml
texnitis_mbf_tools/scripts/: mbf_action_bridge.py  nav_state_publisher.py  planner_benchmark.py  rviz_goal_bridge.py  waypoint_sender.py
texnitis_mbf_tools/test/: conftest.py  test_planner_benchmark.py  test_utils.py
texnitis_mbf_tools/texnitis_mbf_tools/: __init__.py  planner_benchmark.py  utils.py
texnitis_mbf_webui/: CMakeLists.txt  package.xml
texnitis_mbf_webui/launch/: webui.launch.py
texnitis_mbf_webui/webui/: app.js  index.html  map-editor.css  map-editor.html  map-editor.js  style.css
texnitis_navigation_interfaces/: CMakeLists.txt  package.xml
texnitis_navigation_interfaces/msg/: TerrainGrid.msg  Trajectory2D.msg  TrajectoryPoint2D.msg
