<?xml version="1.0"?>
<package format="3">
  <name>texnitis_mbf_bringup</name>
  <version>0.0.1</version>
  <description>Launch / config bringup for the texnitis mbf navigation stack.</description>
  <maintainer email="katsuya.honda@oedodynamics.co.jp">Nyanziba</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mbf_simple_nav</exec_depend>
  <exec_depend>texnitis_mbf_planners</exec_depend>
  <exec_depend>texnitis_mbf_controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
