<?xml version="1.0"?>
<package format="3">
  <name>texnitis_mbf_webui</name>
  <version>0.0.1</version>
  <description>Static WebUI (HTML/JS) for the texnitis mbf navigation stack, hosted via http.server + rosbridge.</description>
  <maintainer email="katsuya.honda@oedodynamics.co.jp">Nyanziba</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
