<?xml version="1.0"?>
<package format="3">
  <name>texnitis_navigation_interfaces</name>
  <version>0.1.0</version>
  <description>ROS interfaces for TEXNITIS navigation terrain data.</description>
  <maintainer email="katsuya.honda@oedodynamics.co.jp">Nyanziba</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
